test/errors/type/collections/set/clear.yasl
echo mt.lookup(collections.set(), .clear)(1)
